--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+numpy<2
 concurrent-log-handler==0.9.25
 boto3==1.34.79
 sanic==23.6.0
@@ -46,7 +47,7 @@ zhipuai==2.0.1.20240429
 langchain_elasticsearch==0.2.2
 tiktoken==0.7.0
 modelscope==1.13.0
-onnxruntime==1.17.1
+onnxruntime-gpu==1.17.1
 cryptography==42.0.8
 shapely==2.0.4
 pyclipper==1.3.0.post5
@@ -59,3 +60,6 @@ PyPDF2==3.0.1
 lxml_html_clean==0.1.1
 docx2txt==0.8
 ipython==8.26.0
+torch==2.0.0+cu118
+torchvision==0.15.0+cu118
+torchaudio==2.0.0+cu118
