--- a/docker-compose-linux.yaml
+++ b/docker-compose-linux.yaml
@@ -6,7 +6,7 @@ services:
     privileged: true
     ports:
       - "9210:9200"
-    restart: on-failure
+    restart: always
     environment:
       - discovery.type=single-node
       - xpack.security.enabled=false
@@ -42,6 +42,7 @@ services:
       interval: 10s
       timeout: 20s
       retries: 3
+    restart: always
 
   minio:
     container_name: milvus-minio-local
@@ -60,6 +61,7 @@ services:
       interval: 10s
       timeout: 20s
       retries: 3
+    restart: always
 
   standalone:
     container_name: milvus-standalone-local
@@ -88,6 +90,7 @@ services:
     depends_on:
       - "etcd"
       - "minio"
+    restart: always
 
   mysql:
     container_name: mysql-container-local
@@ -100,6 +103,7 @@ services:
       - MYSQL_ROOT_PASSWORD=123456
     volumes:
       - ${DOCKER_VOLUME_DIRECTORY:-.}/volumes/mysql:/var/lib/mysql
+    restart: always
 
 
   qanything_local:
@@ -127,6 +131,7 @@ services:
         condition: service_healthy
     tty: true
     stdin_open: true
+    restart: always
 
 #networks:
 #  default:
